--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
     "react/react-in-jsx-scope": "off",
     "space-before-function-paren": "off",
     "react/prop-types": "off",
-    "camelcase": "off"
+    "camelcase": "off",
+    "no-empty-interface": false
   }
 }
